--- a/web/index.html
+++ b/web/index.html
@@ -106,6 +106,9 @@
       font-size: 1.8rem;
       margin-bottom: 1.5rem;
     }
+    main {
+    padding-bottom: 120px; /* 預留空間給 footer */
+  }
   </style>
 </head>
 <body>
