--- a/web/footer.html
+++ b/web/footer.html
@@ -1,74 +1,47 @@
-<!-- footer.html Nexelink 頁尾區塊 -->
-<footer id="footer" class="footer">
-  <div class="footer-content">
-    <div class="footer-links">
-      <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
-      <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
-      <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
-      <a href="#faq"><i class="fas fa-question-circle"></i> 常見問題</a>
-      <a href="#jobs"><i class="fas fa-briefcase"></i> 人才招募</a>
-    </div>
-    <p class="footer-note">&copy; 2025 Nexelink. All rights reserved.</p>
-  </div>
-</footer>
-<script>
-  let lastScrollTop = window.scrollY || 0;
-  const footer = document.getElementById("footer");
-
-  window.addEventListener("scroll", function () {
-    const currentScroll = window.scrollY || 0;
-    const scrollDiff = Math.abs(currentScroll - lastScrollTop);
-
-    if (scrollDiff < 10) return; // 避免微小滑動導致閃爍
-
-    if (currentScroll > lastScrollTop && currentScroll > 100) {
-      footer.classList.add("hide");
-    } else {
-      footer.classList.remove("hide");
-    }
-
-    lastScrollTop = currentScroll;
-  });
-</script>
-
+<!-- footer.html -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 <style>
-  .footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background: linear-gradient(to right, #00C9FF, #92FE9D);
+  footer {
+    background: #003c3c;
     color: white;
-    padding: 20px 10px;
-    box-shadow: 0 -2px 8px rgba(0,0,0,0.2);
-    transition: transform 0.5s ease;
-    z-index: 999;
+    padding: 40px 20px;
+    text-align: center;
   }
-  .footer.hide {
-    transform: translateY(100%);
+  footer .footer-links {
+    margin-bottom: 15px;
   }
-  .footer-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .footer-links {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-bottom: 10px;
-  }
-  .footer-links a {
-    color: white;
+  footer .footer-links a {
+    color: #a0f0e0;
+    margin: 0 12px;
     text-decoration: none;
-    font-weight: 500;
-    transition: opacity 0.3s ease;
+    font-size: 0.95rem;
+    transition: color 0.3s ease;
   }
-  .footer-links a:hover {
-    opacity: 0.8;
+  footer .footer-links a:hover {
+    color: #ffffff;
+    text-decoration: underline;
   }
-  .footer-note {
-    font-size: 0.85rem;
+  footer .social-icons i {
+    margin: 0 8px;
+    font-size: 1.2rem;
+    color: #a0f0e0;
+    transition: transform 0.3s;
+  }
+  footer .social-icons i:hover {
+    transform: scale(1.2);
+    color: #ffffff;
   }
 </style>
+
+<footer>
+  <div class="footer-links">
+  <a href="/web/faq.html"><i class="fas fa-question-circle"></i> 常見問題</a>
+  <a href="/web/jobs.html"><i class="fas fa-briefcase"></i> 人才招募</a>
+  </div>
+  <div class="social-icons">
+    <i class="fab fa-facebook"></i>
+    <i class="fab fa-youtube"></i>
+    <i class="fab fa-instagram"></i>
+  </div>
+  <p style="margin-top: 12px; font-size: 0.85rem; color: #ccc;">&copy; 2025 Nexelink. All rights reserved.</p>
+</footer>
