--- a/web/index.html
+++ b/web/index.html
@@ -174,6 +174,14 @@
       const nav = document.querySelector('nav ul') || document.getElementById('navMenu');
       if (nav) nav.classList.toggle('open');
     }
+
+    // 建議放在頁面底部的 <script> 中
+  window.addEventListener('DOMContentLoaded', () => {
+    fetch('footer.html')
+      .then(res => res.text())
+      .then(data => document.getElementById('footer-placeholder').innerHTML = data);
+  });
+
   </script>
 </body>
 </html>
