Changes to be committed:

--- a/web/jobs.html
+++ b/web/jobs.html
@@ -91,56 +91,56 @@
         <i class="fas fa-gamepad"></i>
         <div class="job-title">遊戲設計師</div>
         <div class="job-desc">負責設計關卡邏輯、玩法機制、角色互動等，偏好熟悉 Minecraft / RPG 遊戲。</div>
-        <a class="apply-btn" href="#">立即應徵</a>
+        <a class="apply-btn" href="/web/craeers.html">立即應徵</a>
       </div>
 
       <div class="job-card">
         <i class="fas fa-film"></i>
         <div class="job-title">動畫製作</div>
         <div class="job-desc">擅長 2D 動畫或動態影片剪輯，能製作教學影片與產品動畫更佳。</div>
-        <a class="apply-btn" href="#">立即應徵</a>
+        <a class="apply-btn" href="/web/craeers.html">立即應徵</a>
       </div>
 
       <div class="job-card">
         <i class="fas fa-server"></i>
         <div class="job-title">後端人員</div>
         <div class="job-desc">熟悉 Node.js / Firebase / MySQL 等後端開發技術，具備 API 串接與資料庫設計能力。</div>
-        <a class="apply-btn" href="#">立即應徵</a>
+        <a class="apply-btn" href="/web/craeers.html">立即應徵</a>
       </div>
 
       <div class="job-card">
         <i class="fas fa-paint-brush"></i>
         <div class="job-title">平面設計</div>
         <div class="job-desc">能製作品牌視覺、社群貼圖、網站與 UI 設計稿，熟 Adobe 系列。</div>
-        <a class="apply-btn" href="#">立即應徵</a>
+        <a class="apply-btn" href="/web/craeers.html">立即應徵</a>
       </div>
 
       <div class="job-card">
         <i class="fas fa-palette"></i>
         <div class="job-title">材質包繪製</div>
         <div class="job-desc">負責 Minecraft 專用材質包繪製，含物件貼圖、裝備與 UI 元素。</div>
-        <a class="apply-btn" href="#">立即應徵</a>
+        <a class="apply-btn" href="/web/craeers.html">立即應徵</a>
       </div>
 
       <div class="job-card">
         <i class="fas fa-plug"></i>
         <div class="job-title">插件模組安裝</div>
         <div class="job-desc">熟悉 Spigot / Purpur / Fabric 插件與模組安裝與調教，能維護伺服器運作。</div>
-        <a class="apply-btn" href="#">立即應徵</a>
+        <a class="apply-btn" href="/web/craeers.html">立即應徵</a>
       </div>
 
       <div class="job-card">
         <i class="fas fa-cube"></i>
         <div class="job-title">建築師</div>
         <div class="job-desc">具備 Minecraft 建築美感與大型地形建設經驗，能配合地圖設計需求。</div>
-        <a class="apply-btn" href="#">立即應徵</a>
+        <a class="apply-btn" href="/web/craeers.html">立即應徵</a>
       </div>
 
       <div class="job-card">
         <i class="fas fa-scroll"></i>
         <div class="job-title">副本編撰</div>
         <div class="job-desc">撰寫伺服器任務劇情、副本內容與世界觀故事，需有敘事與遊戲邏輯能力。</div>
-        <a class="apply-btn" href="#">立即應徵</a>
+        <a class="apply-btn" href="/web/craeers.html">立即應徵</a>
       </div>
 
     </div>
