--- a/web/products.html
+++ b/web/products.html
@@ -124,7 +124,7 @@
       <i class="fas fa-code"></i>
       <div class="product-title">企業網站建置</div>
       <div class="product-desc">量身打造您的專屬形象網站，RWD + SEO 一次到位。</div>
-      <a href="/web/detial.html">查看更多</a>
+      <a href="/product/detial.html">查看更多</a>
     </div>
     <div class="product-card">
       <i class="fas fa-cloud"></i>
@@ -136,7 +136,7 @@
       <i class="fas fa-palette"></i>
       <div class="product-title">LOGO 與品牌設計</div>
       <div class="product-desc">打造符合市場與定位的視覺風格，強化品牌印象。</div>
-      <a href="#">查看更多</a>
+      <a href="/product/branding.html">查看更多</a>
     </div>
     <div class="product-card">
       <i class="fas fa-mobile-alt"></i>
@@ -169,11 +169,11 @@
   <script>
     // 動態載入 nav 與 footer
     window.addEventListener('DOMContentLoaded', () => {
-      fetch('nav.html')
+      fetch('/web/nav.html')
         .then(res => res.text())
         .then(data => document.getElementById('nav-placeholder').innerHTML = data);
 
-      fetch('footer.html')
+      fetch('/web/footer.html')
         .then(res => res.text())
         .then(data => document.getElementById('footer-placeholder').innerHTML = data);
     });
