--- a/web/index.html
+++ b/web/index.html
@@ -159,7 +159,7 @@
   <div id="footer-placeholder"></div>
 
   <script>
-    fetch('/components/nav.html')
+    fetch('../components/nav.html')
       .then(res => res.text())
       .then(data => {
         document.getElementById('nav-placeholder').innerHTML = data;
@@ -179,7 +179,7 @@
     }
 
     // 建議放在頁面底部的 <script> 中
-    fetch('/components/footer.html')
+    fetch('../components/footer.html')
       .then(res => res.text())
       .then(data => {
         document.getElementById('nav-placeholder').innerHTML = data;
