--- a/web/index.html
+++ b/web/index.html
@@ -182,7 +182,7 @@
     fetch('../components/footer.html')
       .then(res => res.text())
       .then(data => {
-        document.getElementById('nav-placeholder').innerHTML = data;
+        document.getElementById('footer-placeholder').innerHTML = data;
     });
 
   </script>
