--- a/web/jobs.html
+++ b/web/jobs.html
@@ -148,8 +148,8 @@
   <div id="footer-placeholder"></div>
   <script>
     window.addEventListener('DOMContentLoaded', () => {
-      fetch('nav.html').then(res => res.text()).then(data => document.getElementById('nav-placeholder').innerHTML = data);
-      fetch('footer.html').then(res => res.text()).then(data => document.getElementById('footer-placeholder').innerHTML = data);
+      fetch('../components/nav.html').then(res => res.text()).then(data => document.getElementById('nav-placeholder').innerHTML = data);
+      fetch('../components/footer.html').then(res => res.text()).then(data => document.getElementById('footer-placeholder').innerHTML = data);
     });
   </script>
 </body>
