--- a/web/login.html
+++ b/web/login.html
@@ -130,10 +130,10 @@
     }
 
     window.addEventListener('DOMContentLoaded', () => {
-      fetch('nav.html')
+      fetch('../components/nav.html')
         .then(res => res.text())
         .then(data => document.getElementById('nav-placeholder').innerHTML = data);
-      fetch('footer.html')
+      fetch('../components/footer.html')
         .then(res => res.text())
         .then(data => document.getElementById('footer-placeholder').innerHTML = data);
     });
