--- a/web/member.html
+++ b/web/member.html
@@ -105,10 +105,10 @@
   <div id="footer-placeholder"></div>
   <script>
     window.addEventListener('DOMContentLoaded', () => {
-      fetch('nav.html')
+      fetch('../components/nav.html')
         .then(res => res.text())
         .then(data => document.getElementById('nav-placeholder').innerHTML = data);
-      fetch('footer.html')
+      fetch('../components/footer.html')
         .then(res => res.text())
         .then(data => document.getElementById('footer-placeholder').innerHTML = data);
     });
