--- a/web/product/app.html
+++ b/web/product/app.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LOGO 與品牌設計｜Nexelink</title>
+  <title>行動應用程式開發｜Nexelink</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #e0f7ff, #f0fff8);
+      background: linear-gradient(to right, #e0f7fa, #fce4ec);
       color: #222;
     }
     main {
@@ -19,7 +19,7 @@
       padding: 0 20px 60px;
     }
     .hero {
-      background: linear-gradient(to right, #009688, #00c9ff);
+      background: linear-gradient(to right, #00acc1, #ec407a);
       color: white;
       text-align: center;
       padding: 100px 20px 60px;
@@ -62,21 +62,6 @@
       font-size: 1.2rem;
       margin-bottom: 10px;
     }
-    .swiper {
-      width: 100%;
-      padding-top: 20px;
-    }
-    .swiper-slide {
-      background: #fff;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    .swiper-slide img {
-      width: 100%;
-      display: block;
-    }
     .pricing-section {
       display: flex;
       flex-wrap: wrap;
@@ -97,10 +82,10 @@
     }
     .pricing-card h3 {
       margin-top: 0;
-      color: #009688;
+      color: #ec407a;
     }
     .cta-banner {
-      background: linear-gradient(to right, #00bfa5, #00c9ff);
+      background: linear-gradient(to right, #00acc1, #ec407a);
       text-align: center;
       padding: 60px 20px;
       border-radius: 16px;
@@ -112,7 +97,7 @@
       margin: 10px 15px;
       padding: 12px 30px;
       background: white;
-      color: #00bfa5;
+      color: #ec407a;
       border-radius: 30px;
       font-weight: bold;
       text-decoration: none;
@@ -126,72 +111,58 @@
 <body>
   <div id="nav-placeholder"></div>
   <div class="hero">
-    <h1><i class="fas fa-palette"></i> LOGO 與品牌設計</h1>
-    <p>打造專屬品牌靈魂的起點，從一個好設計開始</p>
+    <h1><i class="fas fa-mobile-alt"></i> 行動應用程式開發</h1>
+    <p>為您的品牌打造專屬 App，跨平台、高效能、設計精美</p>
   </div>
   <main>
     <div class="section">
-      <h2>🧠 設計流程</h2>
+      <h2>📱 支援平台</h2>
       <div class="card-list">
-        <div class="card"><h3>📌 客戶訪談</h3><p>了解需求與品牌方向</p></div>
-        <div class="card"><h3>📊 品牌分析</h3><p>分析市場定位與色調風格</p></div>
-        <div class="card"><h3>✏️ 草圖提案</h3><p>設計出多款初步草圖方案</p></div>
-        <div class="card"><h3>🎨 色彩與字體</h3><p>細化版面與美術設定</p></div>
-        <div class="card"><h3>✅ 完稿交付</h3><p>提供完整向量檔與應用包</p></div>
+        <div class="card"><h3><i class="fab fa-apple"></i> iOS</h3><p>完整支援 iPhone / iPad 全系列設備</p></div>
+        <div class="card"><h3><i class="fab fa-android"></i> Android</h3><p>適配各大 Android 裝置與商店</p></div>
+        <div class="card"><h3><i class="fas fa-globe"></i> PWA</h3><p>可安裝的 Web App，不限平台瀏覽</p></div>
       </div>
     </div>
 
     <div class="section">
-      <h2>🎨 設計風格範例</h2>
-      <div class="swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="https://via.placeholder.com/800x400?text=極簡風格" alt="極簡風格 Logo"></div>
-          <div class="swiper-slide"><img src="https://via.placeholder.com/800x400?text=科技風格" alt="科技風格 Logo"></div>
-          <div class="swiper-slide"><img src="https://via.placeholder.com/800x400?text=插畫風格" alt="插畫風格 Logo"></div>
-        </div>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>📦 我們提供</h2>
+      <h2>🧩 服務範圍</h2>
       <div class="card-list">
-        <div class="card"><h3>🎯 Logo 草稿</h3><p>提供 2~3 組初稿設計方向</p></div>
-        <div class="card"><h3>📁 向量檔案</h3><p>AI / SVG / PNG 格式完整交付</p></div>
-        <div class="card"><h3>🖋️ 字體規範</h3><p>品牌用字與排版設定建議</p></div>
-        <div class="card"><h3>📘 延伸應用</h3><p>頭像、名片、網頁 ICON 素材</p></div>
+        <div class="card"><h3>🧪 UI/UX 設計</h3><p>依品牌風格打造視覺動線與元件設計</p></div>
+        <div class="card"><h3>🔗 API 串接</h3><p>與後端資料庫 / 第三方服務整合</p></div>
+        <div class="card"><h3>🔐 安全驗證</h3><p>OAuth、JWT、Firebase、雙重登入等</p></div>
+        <div class="card"><h3>📈 分析追蹤</h3><p>串接 GA / Mixpanel / Crashlytics 等工具</p></div>
       </div>
     </div>
 
     <div class="section">
-      <h2>💰 價格與方案</h2>
+      <h2>💰 方案價格</h2>
       <div class="pricing-section">
         <div class="pricing-card">
-          <h3>基礎方案</h3>
-          <p>Logo + 色彩規範</p>
-          <strong>NT$5,000 起</strong>
+          <h3>快速上架</h3>
+          <p>UI 模板 + API 串接</p>
+          <strong>NT$20,000 起</strong>
         </div>
         <div class="pricing-card">
-          <h3>專業方案</h3>
-          <p>Logo + 延伸應用設計</p>
-          <strong>NT$12,000 起</strong>
+          <h3>進階客製</h3>
+          <p>完整設計 + 功能模組化</p>
+          <strong>NT$45,000 起</strong>
         </div>
         <div class="pricing-card">
-          <h3>客製方案</h3>
-          <p>整合品牌策略與識別系統</p>
+          <h3>企業整合</h3>
+          <p>支援多人帳號與後台 CMS</p>
           <strong>報價制</strong>
         </div>
       </div>
     </div>
 
     <div class="cta-banner">
-      <h2>準備好開始您的品牌冒險了嗎？</h2>
+      <h2>準備好將你的服務帶進 App 世界了嗎？</h2>
       <a href="/web/contact.html"><i class="fas fa-envelope"></i> 立即洽詢</a>
       <a href="#"><i class="fas fa-file-download"></i> 下載簡介</a>
     </div>
   </main>
   <div id="footer-placeholder"></div>
 
-  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script>
     window.addEventListener('DOMContentLoaded', () => {
       fetch('/components/nav.html')
@@ -200,9 +171,7 @@
 
       fetch('/components/footer.html')
         .then(res => res.text())
-        .then(data => {
-          document.getElementById('footer-placeholder').innerHTML = data;
-        });
+        .then(data => document.getElementById('footer-placeholder').innerHTML = data);
 
       const observer = new IntersectionObserver(entries => {
         entries.forEach(entry => {
@@ -213,16 +182,6 @@
       }, { threshold: 0.1 });
 
       document.querySelectorAll('.section').forEach(section => observer.observe(section));
-
-      new Swiper('.swiper', {
-        loop: true,
-        autoplay: {
-          delay: 3000,
-          disableOnInteraction: false,
-        },
-        spaceBetween: 20,
-        slidesPerView: 1,
-      });
     });
   </script>
 </body>
