--- a/web/product/hosting.html
+++ b/web/product/hosting.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LOGO 與品牌設計｜Nexelink</title>
+  <title>雲端主機託管｜Nexelink</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #e0f7ff, #f0fff8);
+      background: linear-gradient(to right, #e3f2fd, #e0f7fa);
       color: #222;
     }
     main {
@@ -19,7 +19,7 @@
       padding: 0 20px 60px;
     }
     .hero {
-      background: linear-gradient(to right, #009688, #00c9ff);
+      background: linear-gradient(to right, #0277bd, #26c6da);
       color: white;
       text-align: center;
       padding: 100px 20px 60px;
@@ -62,21 +62,6 @@
       font-size: 1.2rem;
       margin-bottom: 10px;
     }
-    .swiper {
-      width: 100%;
-      padding-top: 20px;
-    }
-    .swiper-slide {
-      background: #fff;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    .swiper-slide img {
-      width: 100%;
-      display: block;
-    }
     .pricing-section {
       display: flex;
       flex-wrap: wrap;
@@ -97,10 +82,10 @@
     }
     .pricing-card h3 {
       margin-top: 0;
-      color: #009688;
+      color: #0288d1;
     }
     .cta-banner {
-      background: linear-gradient(to right, #00bfa5, #00c9ff);
+      background: linear-gradient(to right, #00bcd4, #29b6f6);
       text-align: center;
       padding: 60px 20px;
       border-radius: 16px;
@@ -112,7 +97,7 @@
       margin: 10px 15px;
       padding: 12px 30px;
       background: white;
-      color: #00bfa5;
+      color: #0288d1;
       border-radius: 30px;
       font-weight: bold;
       text-decoration: none;
@@ -126,67 +111,45 @@
 <body>
   <div id="nav-placeholder"></div>
   <div class="hero">
-    <h1><i class="fas fa-palette"></i> LOGO 與品牌設計</h1>
-    <p>打造專屬品牌靈魂的起點，從一個好設計開始</p>
+    <h1><i class="fas fa-server"></i> 雲端主機託管</h1>
+    <p>從遊戲伺服器到企業級網站，彈性、安全、穩定的主機環境</p>
   </div>
   <main>
     <div class="section">
-      <h2>🧠 設計流程</h2>
-      <div class="card-list">
-        <div class="card"><h3>📌 客戶訪談</h3><p>了解需求與品牌方向</p></div>
-        <div class="card"><h3>📊 品牌分析</h3><p>分析市場定位與色調風格</p></div>
-        <div class="card"><h3>✏️ 草圖提案</h3><p>設計出多款初步草圖方案</p></div>
-        <div class="card"><h3>🎨 色彩與字體</h3><p>細化版面與美術設定</p></div>
-        <div class="card"><h3>✅ 完稿交付</h3><p>提供完整向量檔與應用包</p></div>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>🎨 設計風格範例</h2>
-      <div class="swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="https://via.placeholder.com/800x400?text=極簡風格" alt="極簡風格 Logo"></div>
-          <div class="swiper-slide"><img src="https://via.placeholder.com/800x400?text=科技風格" alt="科技風格 Logo"></div>
-          <div class="swiper-slide"><img src="https://via.placeholder.com/800x400?text=插畫風格" alt="插畫風格 Logo"></div>
-        </div>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>📦 我們提供</h2>
-      <div class="card-list">
-        <div class="card"><h3>🎯 Logo 草稿</h3><p>提供 2~3 組初稿設計方向</p></div>
-        <div class="card"><h3>📁 向量檔案</h3><p>AI / SVG / PNG 格式完整交付</p></div>
-        <div class="card"><h3>🖋️ 字體規範</h3><p>品牌用字與排版設定建議</p></div>
-        <div class="card"><h3>📘 延伸應用</h3><p>頭像、名片、網頁 ICON 素材</p></div>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>💰 價格與方案</h2>
+      <h2>💡 主機方案</h2>
       <div class="pricing-section">
         <div class="pricing-card">
-          <h3>基礎方案</h3>
-          <p>Logo + 色彩規範</p>
-          <strong>NT$5,000 起</strong>
+          <h3>小型方案</h3>
+          <p>1vCPU / 1GB RAM / 50GB SSD</p>
+          <strong>NT$299/月</strong>
+        </div>
+        <div class="pricing-card">
+          <h3>標準方案</h3>
+          <p>2vCPU / 4GB RAM / 100GB SSD</p>
+          <strong>NT$599/月</strong>
         </div>
         <div class="pricing-card">
           <h3>專業方案</h3>
-          <p>Logo + 延伸應用設計</p>
-          <strong>NT$12,000 起</strong>
+          <p>4vCPU / 8GB RAM / 200GB SSD</p>
+          <strong>NT$999/月</strong>
         </div>
-        <div class="pricing-card">
-          <h3>客製方案</h3>
-          <p>整合品牌策略與識別系統</p>
-          <strong>報價制</strong>
-        </div>
+      </div>
+    </div>
+
+    <div class="section">
+      <h2>🔧 服務特色</h2>
+      <div class="card-list">
+        <div class="card"><h3>🌍 全球節點</h3><p>可選多區主機，包括亞洲、美洲、歐洲</p></div>
+        <div class="card"><h3>🔒 安全防護</h3><p>每日快照備份，防火牆自動防禦</p></div>
+        <div class="card"><h3>⚙️ 自動監控</h3><p>即時資源監控與預警系統</p></div>
+        <div class="card"><h3>🎮 遊戲支援</h3><p>支援 Minecraft / FiveM / Terraria 等伺服器</p></div>
       </div>
     </div>
 
     <div class="cta-banner">
-      <h2>準備好開始您的品牌冒險了嗎？</h2>
-      <a href="/web/contact.html"><i class="fas fa-envelope"></i> 立即洽詢</a>
-      <a href="#"><i class="fas fa-file-download"></i> 下載簡介</a>
+      <h2>有特殊規格需求？我們可為您客製主機環境</h2>
+      <a href="/web/contact.html"><i class="fas fa-envelope"></i> 聯絡我們</a>
+      <a href="#"><i class="fas fa-file-download"></i> 下載定價</a>
     </div>
   </main>
   <div id="footer-placeholder"></div>
@@ -200,9 +163,7 @@
 
       fetch('/components/footer.html')
         .then(res => res.text())
-        .then(data => {
-          document.getElementById('footer-placeholder').innerHTML = data;
-        });
+        .then(data => document.getElementById('footer-placeholder').innerHTML = data);
 
       const observer = new IntersectionObserver(entries => {
         entries.forEach(entry => {
@@ -213,16 +174,6 @@
       }, { threshold: 0.1 });
 
       document.querySelectorAll('.section').forEach(section => observer.observe(section));
-
-      new Swiper('.swiper', {
-        loop: true,
-        autoplay: {
-          delay: 3000,
-          disableOnInteraction: false,
-        },
-        spaceBetween: 20,
-        slidesPerView: 1,
-      });
     });
   </script>
 </body>
