--- a/web/craeers.html
+++ b/web/craeers.html
@@ -105,10 +105,10 @@
   <script>
     // 導入 nav 與 footer
     window.addEventListener('DOMContentLoaded', () => {
-      fetch('nav.html')
+      fetch('../components/nav.html')
         .then(res => res.text())
         .then(data => document.getElementById('nav-placeholder').innerHTML = data);
-      fetch('footer.html')
+      fetch('../components/footer.html')
         .then(res => res.text())
         .then(data => {
           document.getElementById('footer-placeholder').innerHTML = data;
