Changes to be committed:

--- a/web/product/systeam.html
+++ b/web/product/systeam.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>企業網站建置｜Nexelink</title>
+  <title>系統開發服務｜Nexelink</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #f1f8e9, #e0f2f1);
+      background: linear-gradient(to right, #e0f2f1, #f3e5f5);
       color: #222;
     }
     main {
@@ -18,7 +18,7 @@
       padding: 0 20px 60px;
     }
     .hero {
-      background: linear-gradient(to right, #558b2f, #00796b);
+      background: linear-gradient(to right, #5c6bc0, #0097a7);
       color: white;
       text-align: center;
       padding: 100px 20px 60px;
@@ -81,10 +81,10 @@
     }
     .pricing-card h3 {
       margin-top: 0;
-      color: #00796b;
+      color: #0097a7;
     }
     .cta-banner {
-      background: linear-gradient(to right, #558b2f, #00796b);
+      background: linear-gradient(to right, #5c6bc0, #0097a7);
       text-align: center;
       padding: 60px 20px;
       border-radius: 16px;
@@ -96,7 +96,7 @@
       margin: 10px 15px;
       padding: 12px 30px;
       background: white;
-      color: #00796b;
+      color: #0097a7;
       border-radius: 30px;
       font-weight: bold;
       text-decoration: none;
@@ -110,19 +110,19 @@
 <body>
   <div id="nav-placeholder"></div>
   <div class="hero">
-    <h1><i class="fas fa-globe"></i> 企業網站建置</h1>
-    <p>打造專業品牌形象，從頁面到後台，完整網路解決方案</p>
+    <h1><i class="fas fa-server"></i> 系統開發服務</h1>
+    <p>從 ERP 到 API，量身打造穩定、高效、安全的系統平台</p>
   </div>
   <main>
     <div class="section">
-      <h2>🔧 建置內容</h2>
+      <h2>🛠️ 開發項目</h2>
       <div class="card-list">
-        <div class="card"><h3><i class="fas fa-desktop"></i> 響應式設計</h3><p>兼容桌機與手機，適應多裝置螢幕</p></div>
-        <div class="card"><h3><i class="fas fa-cogs"></i> 後台管理</h3><p>CMS 可視化內容管理系統，自主更新不求人</p></div>
-        <div class="card"><h3><i class="fas fa-shopping-cart"></i> 電商功能</h3><p>支援商品上架、購物車與金流串接</p></div>
-        <div class="card"><h3><i class="fas fa-chart-line"></i> 數據追蹤</h3><p>整合 Google Analytics、SEO 優化</p></div>
-        <div class="card"><h3><i class="fas fa-users"></i> 會員系統</h3><p>登入註冊、訂單查詢、點數系統等模組</p></div>
-        <div class="card"><h3><i class="fas fa-cloud-upload-alt"></i> 雲端部署</h3><p>協助部署至 Vercel、Firebase、cPanel 等平台</p></div>
+        <div class="card"><h3><i class="fas fa-network-wired"></i> 企業內部系統</h3><p>HR / ERP / CRM / MIS 全面客製</p></div>
+        <div class="card"><h3><i class="fas fa-database"></i> 資料庫設計</h3><p>結構化管理 MySQL、MongoDB、PostgreSQL 等</p></div>
+        <div class="card"><h3><i class="fas fa-code"></i> API 串接</h3><p>RESTful / GraphQL / OAuth / 第三方整合</p></div>
+        <div class="card"><h3><i class="fas fa-cloud"></i> 雲端系統</h3><p>部署至 GCP / AWS / Firebase 等平台</p></div>
+        <div class="card"><h3><i class="fas fa-shield-alt"></i> 資安強化</h3><p>資安評估、滲透測試、SSL、登入驗證</p></div>
+        <div class="card"><h3><i class="fas fa-cogs"></i> 自動化工具</h3><p>流程自動化、排程、批次作業與通報系統</p></div>
       </div>
     </div>
 
@@ -130,26 +130,26 @@
       <h2>💰 方案價格</h2>
       <div class="pricing-section">
         <div class="pricing-card">
-          <h3>形象官網</h3>
-          <p>首頁 + 關於 + 聯絡表單</p>
-          <strong>NT$18,000 起</strong>
+          <h3>模組整合</h3>
+          <p>將現有架構加入新功能</p>
+          <strong>NT$25,000 起</strong>
         </div>
         <div class="pricing-card">
-          <h3>企業官網</h3>
-          <p>首頁 + CMS 後台 + 產品頁</p>
-          <strong>NT$35,000 起</strong>
+          <h3>系統開發</h3>
+          <p>中型系統全流程開發</p>
+          <strong>NT$60,000 起</strong>
         </div>
         <div class="pricing-card">
-          <h3>電商網站</h3>
-          <p>購物車 + 結帳 + 金流整合</p>
-          <strong>NT$58,000 起</strong>
+          <h3>大型客製</h3>
+          <p>完整規劃＋雲端部署與維運</p>
+          <strong>報價制</strong>
         </div>
       </div>
     </div>
 
     <div class="cta-banner">
-      <h2>讓我們幫你打造穩定高效的企業網站</h2>
-      <a href="contact.html"><i class="fas fa-envelope"></i> 立即洽詢</a>
+      <h2>立即諮詢，打造專屬您的智慧系統平台</h2>
+      <a href="/web/contact.html"><i class="fas fa-envelope"></i> 聯絡我們</a>
       <a href="#"><i class="fas fa-file-download"></i> 下載簡介</a>
     </div>
   </main>
