--- a/web/products.html
+++ b/web/products.html
@@ -148,13 +148,13 @@
       <i class="fas fa-network-wired"></i>
       <div class="product-title">整合系統開發</div>
       <div class="product-desc">從前台到後台，完整串接 ERP、CRM、資料分析平台。</div>
-      <a href="#">查看更多</a>
+      <a href="/web/product/systeam.html">查看更多</a>
     </div>
     <div class="product-card">
-      <i class="fas fa-desktop"></i>
-      <div class="product-title">UI/UX 視覺設計</div>
-      <div class="product-desc">高互動介面設計，強化使用者體驗與品牌轉換率。</div>
-      <a href="#">查看更多</a>
+      <i class="fas fa-film"></i>
+      <div class="product-title">影片剪輯</div>
+      <div class="product-desc">專業客製化設計，大型專案 中小個人皆可</div>
+      <a href="/web/product/video.html">查看更多</a>
     </div>
   </section>
 
