--- a/web/product/video.html
+++ b/web/product/video.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>企業網站建置｜Nexelink</title>
+  <title>影片剪輯服務｜Nexelink</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #f1f8e9, #e0f2f1);
+      background: linear-gradient(to right, #e1f5fe, #f3e5f5);
       color: #222;
     }
     main {
@@ -18,7 +18,7 @@
       padding: 0 20px 60px;
     }
     .hero {
-      background: linear-gradient(to right, #558b2f, #00796b);
+      background: linear-gradient(to right, #42a5f5, #ab47bc);
       color: white;
       text-align: center;
       padding: 100px 20px 60px;
@@ -81,10 +81,10 @@
     }
     .pricing-card h3 {
       margin-top: 0;
-      color: #00796b;
+      color: #ab47bc;
     }
     .cta-banner {
-      background: linear-gradient(to right, #558b2f, #00796b);
+      background: linear-gradient(to right, #42a5f5, #ab47bc);
       text-align: center;
       padding: 60px 20px;
       border-radius: 16px;
@@ -96,7 +96,7 @@
       margin: 10px 15px;
       padding: 12px 30px;
       background: white;
-      color: #00796b;
+      color: #ab47bc;
       border-radius: 30px;
       font-weight: bold;
       text-decoration: none;
@@ -110,19 +110,19 @@
 <body>
   <div id="nav-placeholder"></div>
   <div class="hero">
-    <h1><i class="fas fa-globe"></i> 企業網站建置</h1>
-    <p>打造專業品牌形象，從頁面到後台，完整網路解決方案</p>
+    <h1><i class="fas fa-video"></i> 影片剪輯服務</h1>
+    <p>專業後製、風格定調、動畫標題與社群導向剪輯</p>
   </div>
   <main>
     <div class="section">
-      <h2>🔧 建置內容</h2>
+      <h2>🎬 服務項目</h2>
       <div class="card-list">
-        <div class="card"><h3><i class="fas fa-desktop"></i> 響應式設計</h3><p>兼容桌機與手機，適應多裝置螢幕</p></div>
-        <div class="card"><h3><i class="fas fa-cogs"></i> 後台管理</h3><p>CMS 可視化內容管理系統，自主更新不求人</p></div>
-        <div class="card"><h3><i class="fas fa-shopping-cart"></i> 電商功能</h3><p>支援商品上架、購物車與金流串接</p></div>
-        <div class="card"><h3><i class="fas fa-chart-line"></i> 數據追蹤</h3><p>整合 Google Analytics、SEO 優化</p></div>
-        <div class="card"><h3><i class="fas fa-users"></i> 會員系統</h3><p>登入註冊、訂單查詢、點數系統等模組</p></div>
-        <div class="card"><h3><i class="fas fa-cloud-upload-alt"></i> 雲端部署</h3><p>協助部署至 Vercel、Firebase、cPanel 等平台</p></div>
+        <div class="card"><h3><i class="fas fa-cut"></i> 剪輯處理</h3><p>修剪、轉場、音樂搭配、節奏優化</p></div>
+        <div class="card"><h3><i class="fas fa-heading"></i> 字幕與標題</h3><p>客製字型、動畫標題、中文字幕</p></div>
+        <div class="card"><h3><i class="fas fa-bullhorn"></i> 社群導向</h3><p>直式影片、YT Shorts、IG Reels 專用格式</p></div>
+        <div class="card"><h3><i class="fas fa-magic"></i> 動態特效</h3><p>遮罩、分割畫面、炫光與圖像動畫</p></div>
+        <div class="card"><h3><i class="fas fa-photo-video"></i> 專案製作</h3><p>專訪、Vlog、開箱、活動紀錄完整企劃</p></div>
+        <div class="card"><h3><i class="fas fa-rocket"></i> 快速交件</h3><p>急件處理 3 天內交件選項</p></div>
       </div>
     </div>
 
@@ -130,26 +130,26 @@
       <h2>💰 方案價格</h2>
       <div class="pricing-section">
         <div class="pricing-card">
-          <h3>形象官網</h3>
-          <p>首頁 + 關於 + 聯絡表單</p>
-          <strong>NT$18,000 起</strong>
+          <h3>社群剪輯</h3>
+          <p>1 分鐘以內短影音</p>
+          <strong>NT$3,000 起</strong>
         </div>
         <div class="pricing-card">
-          <h3>企業官網</h3>
-          <p>首頁 + CMS 後台 + 產品頁</p>
-          <strong>NT$35,000 起</strong>
+          <h3>Vlog / 活動紀錄</h3>
+          <p>5~10 分鐘正式影片</p>
+          <strong>NT$8,000 起</strong>
         </div>
         <div class="pricing-card">
-          <h3>電商網站</h3>
-          <p>購物車 + 結帳 + 金流整合</p>
-          <strong>NT$58,000 起</strong>
+          <h3>企業專案</h3>
+          <p>專業剪輯 + 動畫 + 配音</p>
+          <strong>報價制</strong>
         </div>
       </div>
     </div>
 
     <div class="cta-banner">
-      <h2>讓我們幫你打造穩定高效的企業網站</h2>
-      <a href="contact.html"><i class="fas fa-envelope"></i> 立即洽詢</a>
+      <h2>讓你的影片更吸睛，打造高品質影音內容！</h2>
+      <a href="/web/contact.html"><i class="fas fa-envelope"></i> 立即洽詢</a>
       <a href="#"><i class="fas fa-file-download"></i> 下載簡介</a>
     </div>
   </main>
