Changes to be committed:

--- a/web/contact.html
+++ b/web/contact.html
@@ -100,9 +100,8 @@
       </form>
 
       <div class="contact-info">
-        <p><i class="fas fa-phone"></i> 02-1234-5678</p>
-        <p><i class="fas fa-map-marker-alt"></i> 台北市中正區某某路 123 號</p>
-        <p><i class="fas fa-clock"></i> 服務時間：週一至週五 9:00 - 18:00</p>
+        <p><i class="fas fa-phone"></i> 0966-434-300</p>
+        <p><i class="fas fa-clock"></i> 服務時間：週一至週日 8:00 - 24:00</p>
       </div>
     </div>
   </main>
