--- a/web/index.html
+++ b/web/index.html
@@ -126,7 +126,10 @@
     <section class="hero">
       <h1><i class="fas fa-rocket"></i> 融合設計與技術，打造最具美感的網站體驗</h1>
       <p><i class="fas fa-lightbulb"></i> Nexelink — 專屬你的數位夥伴</p>
-      <button class="cta-btn"><i class="fas fa-paper-plane"></i> 立即合作</button>
+      <a href="/web/contact.html" class="cta-btn">
+        <i class="fas fa-paper-plane"></i> 立即合作
+      </a>
+
     </section>
 
     <section class="services">
@@ -152,7 +155,10 @@
 
     <section class="cta-section">
       <h2>準備好展開你的數位計畫了嗎？</h2>
-      <button class="cta-btn"><i class="fas fa-envelope"></i> 聯絡我們</button>
+      <a href="/web/contact.html" class="cta-btn">
+        <i class="fas fa-paper-plane"></i> 聯絡我們
+      </a>
+
     </section>
   </main>
 
