--- a/web/member.html
+++ b/web/member.html
@@ -169,9 +169,9 @@
           <h3>留言 / 回饋</h3>
         </a>
         <div class="card">
-          <a href="tse-server.html">
-            <i class="fas fa-gamepad"></i>
-            前往 SOV TSE 遊戲伺服器
+          <a href="#">
+            <i class="fas fa-cloud"></i>
+            我的雲端主機
           </a>
         </div>
       </div>
