--- a/web/products.html
+++ b/web/products.html
@@ -109,7 +109,7 @@
   <div id="nav-placeholder"></div>
 
   <header>
-    <h1><i class="fas fa-box"></i> Nexelink 商品一覽</h1>
+    <h1><i class="fas fa-box"></i> Nexelink 服務一覽</h1>
     <p>我們提供專業、穩定、高效率的技術產品與服務</p>
   </header>
 
